business logic for OSM synchronisation

--- a/PostgisSync/src/config_transportation_types.json
+++ b/PostgisSync/src/config_transportation_types.json
@@ -1,5 +1,1 @@
-{
-  "transportation_types": {
-    "train": "91919191"
-  }
-}
+{"transportation_types":{"bus":"10fa36e0-322b-4329-b31e-acf90ed486cd"}}
