--- a/PostgisSync/src/config_poi_types.json
+++ b/PostgisSync/src/config_poi_types.json
@@ -1,6 +1,1 @@
-{
-  "poi_types": {
-    "bus_asdf": "asdfasdf",
-    "bus_stop": "91919191-12341234"
-  }
-}
+{"poi_types":{"bus_stop":"473dae3c-4afc-4471-a563-9c36d791c7c9"}}
